# avro_schema_helpers-python_lib

./: CHANGELOG.md  README.md  pyproject.toml
src/avro_schema_helpers_python_lib/: swap_camcelcase_with_snakecase.py
src/ccaf_avro_schema_helpers_lib/: common.py  generate_flink_sql_statements_for_fully_flatten_root_record.py  swap_camcelcase_with_snakecase.py
src/ccaf_avro_schema_helpers_python_lib/: generate_flink_sql_statements_for_fully_flatten_root_record.py  swap_camcelcase_with_snakecase.py  swap_camelcase_with_snakecase.py
tests/: test_generate_flink_sql_statements_for_fully_flatten_root_record.py  test_swap_camelcase_with_snakecase.py
