[project]
name = "ccaf-avro_schema_helpers-lib"
version = "0.01.00.000"
description = "CCAF Avro Schema Helpers Library"
readme = "README.md"
requires-python = ">=3.11.9"
authors = [
    { name = "Jeffrey Jonathan Jennings (J3)", email = "j3@thej3.com" }
]
dependencies = [
    "confluent-flink-table-api-python-plugin>=1.20.50",
    "fastavro>=1.10.0",
    "pytest>=8.3.4",
    "setuptools>=65.5.1",
    "cc-clients-lib @ git+https://github.com/j3-signalroom/cc-clients-lib.git",
]

[tool.pytest.ini_options]
log_file = "tests/test.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s - %(levelname)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
